--- a/index.html
+++ b/index.html
@@ -517,6 +517,60 @@
               </a>
             </div>
           </div>
+
+          <!-- Project 5 - Вилла в Ханчжоу -->
+          <div class="project-item">
+            <div class="project-image">
+              <img
+                src="content/projects/villa_gangzhou/photo_9_2025-07-20_18-18-12.jpg"
+                alt="Вилла в Ханчжоу"
+                data-translate-alt="project-hangzhou-villa-alt"
+              />
+            </div>
+            <div class="project-info">
+              <span
+                class="project-category"
+                data-translate="project-category-villa"
+                >Вилла</span
+              >
+              <h3 class="project-title" data-translate="project-hangzhou-villa">
+                Вилла в Ханчжоу
+              </h3>
+              <p
+                class="project-description"
+                data-translate="project-desc-hangzhou-villa"
+              >
+                Гармоничное сочетание современного дизайна и европейского комфорта в интерьере.
+              </p>
+              <div class="project-features">
+                <div class="project-feature">
+                  <i class="fas fa-check-circle"></i>
+                  <span data-translate="project-hangzhou-feature-design"
+                    >Авторские дизайн-решения</span
+                  >
+                </div>
+                <div class="project-feature">
+                  <i class="fas fa-check-circle"></i>
+                  <span data-translate="project-hangzhou-feature-materials"
+                    >Качественные отделочные материалы</span
+                  >
+                </div>
+                <div class="project-feature">
+                  <i class="fas fa-check-circle"></i>
+                  <span data-translate="project-hangzhou-feature-smart"
+                    >Smart-системы для комфорта</span
+                  >
+                </div>
+              </div>
+              <a
+                class="project-link btn-gallery"
+                data-gallery="villa_gangzhou"
+                data-translate="project-details"
+              >
+                Подробнее о проекте <i class="fas fa-arrow-right"></i>
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </section>
