Fix image loading: use local hero images, add preloading, remove missing slide

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://panzzi.com/" />
     
+    <!-- Preload Hero Images -->
+    <link rel="preload" as="image" href="content/hero/hero-2.jpg" />
+    <link rel="preload" as="image" href="content/hero/hero-3.jpg" />
+    
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://panzzi.com/" />
@@ -135,19 +139,19 @@
         <div
           class="hero-slide active"
           style="
-            background-image: url('https://images.unsplash.com/photo-1555396273-367ea4eb4db5?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
+            background-image: url('content/hero/hero-2.jpg');
           "
         ></div>
         <div
           class="hero-slide"
           style="
-            background-image: url('https://avatars.mds.yandex.net/get-yabs_performance/13925043/hatcb06a1df393286053a2d88bf7d75e1c1/hugeXX');
+            background-image: url('content/hero/hero-3.jpg');
           "
         ></div>
         <div
           class="hero-slide"
           style="
-            background-image: url('https://cdn.nonton.ru/resize_cache/6838040/9b198b03fb7fb87137cfd873d1b3a69c/iblock/301/301a06fe389f90cc8e97ad0514ff82a1/Milan_Kids_001.jpeg');
+            background-image: url('content/hero/hero-3.jpg');
           "
         ></div>
       </div>
@@ -236,7 +240,6 @@
               src="content/Mockaps/2.jpg"
               alt="О PANZZi — поставщик премиум мебели из Китая"
               data-translate-alt="about-image-alt"
-              loading="lazy"
               decoding="async"
             />
           </div>
