--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="supported-languages" content="ru, en" />
     
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function(m,e,t,r,i,k,a){
+            m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+            m[i].l=1*new Date();
+            for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+            k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)
+        })(window, document,'script','https://mc.yandex.ru/metrika/tag.js?id=106134066', 'ym');
+
+        ym(106134066, 'init', {ssr:true, webvisor:true, clickmap:true, ecommerce:"dataLayer", referrer: document.referrer, url: location.href, accurateTrackBounce:true, trackLinks:true});
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/106134066" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
+    
     <!-- SEO Meta Tags -->
     <meta name="description" content="PANZZi — премиум мебель, освещение, посуда и материалы для интерьера из Китая. Оснащаем рестораны, отели, виллы под ключ. 20 лет опыта в F&B индустрии." />
     <meta name="keywords" content="мебель из Китая, посуда для ресторанов, освещение, интерьер отеля, оснащение ресторана, PANZZi, мебель для HoReCa, дизайнерская мебель" />
